<resources>

    <string name="app_name">blessed-android</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>

    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnected">已断开</string>
    <string name="disconnect">断开</string>
    <string name="set_torque">设置扭矩</string>
    <string name="show_details">查看详情</string>
    <string name="device_info">设备信息</string>
    <string name="rt_power">实时功率</string>
    <string name="rt_cadence">实时踏频</string>
    <string name="rt_torque">实时扭矩</string>

    <string name="enable_bt">开启蓝牙</string>

</resources>